Open Graph implementation
Added Open Graph tags and associated images.

--- a/simpleDraw.html
+++ b/simpleDraw.html
@@ -32,8 +32,20 @@
             margin: 0;
             overflow: hidden;
         }
-
+        
     </style>
+    
+     <!-- Open Graph Content: Starts -->
+
+    <meta property="og:title" content="JavaScript Drawing" />
+    <meta property="og:url" content="http://kahelafickle.webhostingforstudents.com/cas265/module04/JS-Drawing-Program/">
+    <meta property="og:image" content="Demo.PNG">
+    <meta property="og:image" content="JS-Drawing.jpg">
+    <meta property="og:type" content="website">
+        <meta property="og:description" content="Learn JavaScript! Make cool stuff &#128526;">
+
+    <!-- Open Graph Content: Close -->
+
 
 </head>
 
